--- a/e-ticketbook-jp/resale/index.html
+++ b/e-ticketbook-jp/resale/index.html
@@ -148,13 +148,13 @@
                                 <li>
                                     <dl>
                                         <dt class="resale_step_num">STEP<span>01</span></dt>
-                                        <dd class="resale_step_txt">ticketbookマイページの【発券・分配】<br>より行けなくなった公演を選択</dd>
+                                        <dd class="resale_step_txt">ticketbookマイページの【発券・分配】<br>より出品したい公演を選択</dd>
                                     </dl>
                                 </li>
                                 <li>
                                     <dl>
                                         <dt class="resale_step_num">STEP<span>02</span></dt>
-                                        <dd class="resale_step_txt">出品したい座席を選択し、チケット出品</dd>
+                                        <dd class="resale_step_txt">出品したい座席を選択し、チケットを出品</dd>
                                     </dl>
                                 </li>
                                 <li>
@@ -173,8 +173,8 @@
                             <div class="resale_annotation">
                                 <h3 class="resale_annotation_ttl">※注意事項※</h3>
                                 <ul class="resale_annotation_list">
-                                    <li>ticketbookで取り扱っているイベントの内、指定された一部のイベントのみ定価リセールサービスを利用することができます。ticketbookで購入されたチケットのみ、申込者様が出品することができます。<br>（分配された同行者様が出品することはできません）</li>
-                                    <li>出品されたチケットが必ずしも成立するものとは限りません。</li>
+                                    <li>ticketbookで取り扱っているイベントの内、指定された一部のイベントのみ定価リセールサービスを利用することができます。ticketbookでご購入されたチケットのみ、申込者様が出品することができます。<br>（分配された同行者様が出品することはできません）</li>
+                                    <li>出品されたチケットが必ずしも売買成立するものとは限りません。</li>
                                     <li>分配中、分配済のチケットは出品できません。出品するには、分配キャンセルを行ってください。この際、必ず同行者様の承諾を得て、出品されるよう、お願いいたします。</li>
                                     <li>リセール取引成立後の変更・キャンセルはできませんので、ご注意ください。取引成立前であれば、出品キャンセルを行うことが可能です。</li>
                                     <li>出品前にダウンロードされたチケットは、取引成立後に無効となり、チケット権利はリセール購入者様へ移行されます。</li>
@@ -183,7 +183,7 @@
                                     <li>1回の出品で複数枚のチケットを出品された場合、出品枚数単位での販売となります。チケットを2枚まとめて出品された場合、そのうちの1枚だけを販売することはできません。</li>
                                     <li>リセール取引が成立した場合のみ、ご購入いただいたチケット代金より、リセール成立手数料を差引いた金額をご返金いたします。その際、チケットご購入時の各種手数料はご返金の対象外となりますので、あらかじめご了承ください。</li>
                                     <li>リセール取引成立後、チケット購入時に使用したクレジットカードへ代金をご返金いたします。</li>
-                                    <li>リセール取引が成立しなかった場合、チケット代金等を返金することはできません。<br>（リセール手数料はかかりません）</li>
+                                    <li>リセール取引が成立しなかった場合、チケット代金等をご返金することはできません。<br>（リセール手数料はかかりません）</li>
                                     <li>リセール取引が成立しなかった場合、リセールサービス実施期間終了時に出品キャンセルを行うことで、チケットを再度ダウンロードすることが可能になり、当該イベントに入場することができます。</li>
                                 </ul>
                             </div>
@@ -229,15 +229,15 @@
                                 <ul class="resale_annotation_list">
                                     <li>ticketbookで取り扱っているイベントの内、指定された一部のイベントのみリセールサービスを利用することができます。</li>
                                     <li>リセールサービスのご利用には｢ticketbook｣への会員登録(無料)が必要となります。また、チケットの分配を受ける同行者様も「ticketbook」への会員登録(無料)が必要です。</li>
-                                    <li>リセールサービスで出品されたケータイ電子チケットの購入は先着順となります。</li>
-                                    <li class="kome">お支払方法はクレジットカードのみとなり、お申込完了と同時に自動決済されますのであらかじめご了承ください。</li>
+                                    <li>リセールサービスで出品されたチケットのご購入は先着順となります。</li>
+                                    <li class="kome">お支払方法はクレジットカード(デビットカード・プリペイドカード)のみとなり、当選と同時に自動決済されますのであらかじめご了承ください。</li>
                                     <li>既に同一公演のチケットをお持ちの場合、リセールサービスでご購入することはできません。</li>
                                     <li>お一人様1公演につき1申込限り、4枚までお申込みいただけます。<br>（同一公演を2セット以上ご購入することはできません）</li>
                                     <li>リセールサービスでご購入されたチケットを出品することはできません。</li>
                                     <li>出品枚数単位でのご購入となります。2枚まとめて出品されているチケットの場合、1枚だけをご購入することはできません。</li>
                                     <li>ご購入されたチケットのキャンセル、変更およびリセールサービスで出品することはできません。</li>
                                     <li>座席番号および整理番号を指定してのご購入はできません。</li>
-                                    <li>お取引成立後、チケット料金+各種手数料をお支払いいただきます。<br>（一般販売時と同額の手数料となります）</li>
+                                    <li>お取引成立後、チケット料金+各種手数料をお支払いいただきます。<br>（一般発売時と同額の手数料となります）</li>
                                 </ul>
                             </div>
                             <div class="resale_link">
