--- a/resale/index.html
+++ b/resale/index.html
@@ -230,7 +230,7 @@
                                     <li>ticketbookで取り扱っているイベントの内、指定された一部のイベントのみリセールサービスを利用することができます。</li>
                                     <li>リセールサービスのご利用には｢ticketbook｣への会員登録(無料)が必要となります。また、チケットの分配を受ける同行者様も「ticketbook」への会員登録(無料)が必要です。</li>
                                     <li>リセールサービスで出品されたチケットのご購入は先着順となります。</li>
-                                    <li class="kome">お支払方法はクレジットカード(デビットカード・プリペイドカード)のみとなり、当選と同時に自動決済されますのであらかじめご了承ください。</li>
+                                    <li class="nakaguro">お支払方法はクレジットカード(デビットカード・プリペイドカード)のみとなり、当選と同時に自動決済されますのであらかじめご了承ください。</li>
                                     <li>既に同一公演のチケットをお持ちの場合、リセールサービスでご購入することはできません。</li>
                                     <li>お一人様1公演につき1申込限り、4枚までお申込みいただけます。<br>（同一公演を2セット以上ご購入することはできません）</li>
                                     <li>リセールサービスでご購入されたチケットを出品することはできません。</li>
